--- a/event/templates/Asset_new.html
+++ b/event/templates/Asset_new.html
@@ -79,11 +79,11 @@
                     <div class="coordinates-input-container">
                         <div>
                             <label for="latitude">Latitude:</label>
-                            <input class="text-input" type="text" id="latitude" name="latitude" onblur="check_lat_lon()" name="latitude" />
+                            <input class="text-input" type="text" id="latitude" name="Latitude" onblur="check_lat_lon()" name="latitude" />
                         </div>
                         <div>
                             <label for="longitude">Longitude:</label>
-                            <input class="text-input" type="text" id="longitude" name="longitude" onblur="check_lat_lon()" name="longitude" />
+                            <input class="text-input" type="text" id="longitude" name="Longitude" onblur="check_lat_lon()" name="longitude" />
                         </div>
                     </div>
                 </div>
@@ -111,7 +111,7 @@
                 </ul>
                 </p>
                 <label class="passive-button file-input">
-                    <input id="content-file" accept="*" type="file" hidden onchange="handleContentUpload(this)" />
+                    <input id="content-file" accept="*" type="file" name="Asset_File" hidden onchange="handleContentUpload(this)" />
                     Upload file
                 </label>
                 <p id="content-error" class="error"></p>
@@ -122,6 +122,7 @@
         </div>
       </div>
      {{ form|crispy }}
+     <button class="bg-purple-800 text-white px-16 py-3 rounded outline-none block" type="submit">Save</button>
     <page-footer></page-footer>
     <feedback-button></feedback-button>
 
