--- a/event/templates/Asset_detail.html
+++ b/event/templates/Asset_detail.html
@@ -1,17 +1,31 @@
-{% extends '_base.html' %}
+{% extends '_base.html' %} {% block content %}
+<div class="article-entry">
+	{% if object.featured_image %}
+	<img class="bookcover" src="{{ object.featured_image.url }}" />
+	{% endif %}
+	<h2>{{ object.code }}</h2>
+	<p>
+		<span class="text-muted">
+			Expiry date: {{ object.Expiry_date }} | Expiry time: {{ object.Expiry_time
+			}}</span
+		>
+	</p>
+	<!-- <p>Google maps link {{ object.Google_maps_link }}</p>
+      <p>ASSETS_TYPE {{object.ASSETS_TYPE}}</p> -->
+</div>
 
-{% block content %}
-  <div class="article-entry">
-      {% if object.featured_image %}
-     <img class="bookcover" src="{{ object.featured_image.url }}">
-        {% endif %}
-      <h2>{{ object.code }}</h2>
-      <p> <span class="text-muted"> Expiry date: {{ object.Expiry_date }} | Expiry time: {{ object.Expiry_time }}</span></p>
-      <p>Google maps link {{ object.Google_maps_link }}</p>
-      <p>ASSETS_TYPE {{object.ASSETS_TYPE}}</p>
-  </div>
-
-  <p><a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'Asset_edit' asset.id %}">Edit</a> |
-    <a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'Asset_delete' asset.id %}">Delete</a></p>
-  <p>Back to <a href="{% url 'Assets_list' %}">All Assets</a>.</p>
+<p>
+	<a
+		class="text-purple-400 capitalize hover:text-purple-800"
+		href="{% url 'Asset_edit' asset.id %}"
+		>Edit</a
+	>
+	|
+	<a
+		class="text-purple-400 capitalize hover:text-purple-800"
+		href="{% url 'Asset_delete' asset.id %}"
+		>Delete</a
+	>
+</p>
+<p>Back to <a href="{% url 'Assets_list' %}">All Assets</a>.</p>
 {% endblock content %}
