--- a/event/templates/Assets_list.html
+++ b/event/templates/Assets_list.html
@@ -15,8 +15,8 @@
             <span class="text-muted">Expiry_date: {{ asset.Expiry_date }} <br> Expiry_time: {{ asset.Expiry_time }}  </span>
           </div>
           <div class="card-body">
-           ASSETS TYPE: {{ asset.ASSETS_TYPE }} <br>
-              Google maps link: {{ asset.Google_maps_link }}
+           <!-- ASSETS TYPE: {{ asset.ASSETS_TYPE }} <br> -->
+              <!-- Google maps link: {{ asset.Google_maps_link }} -->
           </div>
           <div class="card-footer text-center text-muted">
             <a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'Asset_edit' asset.id %}">Edit</a> | <a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'Asset_delete' asset.id %}">Delete</>
