--- a/event/templates/Asset_new.html
+++ b/event/templates/Asset_new.html
@@ -80,11 +80,11 @@
                     <div class="coordinates-input-container">
                         <div>
                             <label for="latitude">Latitude:</label>
-                            <input class="text-input" type="text" id="latitude" name="Latitude" onblur="check_lat_lon()" name="latitude" />
+                            <input class="text-input" type="text" id="latitude" name="Latitude" onblur="check_lat_lon()"  />
                         </div>
                         <div>
                             <label for="longitude">Longitude:</label>
-                            <input class="text-input" type="text" id="longitude" name="Longitude" onblur="check_lat_lon()" name="longitude" />
+                            <input class="text-input" type="text" id="longitude" name="Longitude" onblur="check_lat_lon()"  />
                         </div>
                     </div>
                 </div>
