--- a/event/templates/Assets_list.html
+++ b/event/templates/Assets_list.html
@@ -5,6 +5,7 @@
 {% block content %}
 <div class="grid grid-cols-3 gap-4 w-5/6 pl-6 pt-6">
   {% for asset in object_list %}
+     {% if user.id  == asset.user.id %}
         <div class="card">
 
           <div class="card-header">
@@ -19,6 +20,12 @@
           </div>
         </div>
 
+    {% endif %}
+    {% else %}
+        <div class="m-auto w-full">
+            <p>there is no assets for you :) </p>
+        </div>
+    {% endelse %}
   {% endfor %}
 </div>
 {% endblock content %}
